--- a/src/main/resources/org/example/App.css
+++ b/src/main/resources/org/example/App.css
@@ -22,3 +22,12 @@
     -fx-background-insets: 0;
     -fx-padding: 1 3 1 3;
 }
+
+.button {
+    -fx-min-width: 75px;
+    -fx-min-height: 75px;
+}
+
+#send {
+    -fx-max-width: 500px;
+}
