--- a/src/main/resources/org/example/app.css
+++ b/src/main/resources/org/example/app.css
@@ -11,6 +11,7 @@
     -fx-font-size: 32px;
     -fx-font-family: Verdana;
     -fx-text-box-border: transparent;
+
 }
 
 .text-field:focused {
@@ -23,11 +24,17 @@
     -fx-padding: 1 3 1 3;
 }
 
-.button{
+.button {
     -fx-min-width: 75px;
     -fx-min-height: 75px;
+    -fx-focus-traversable: false;
 }
 
-#send{
+#send {
     -fx-max-width: 500px;
+}
+
+#logOutButton {
+    -fx-min-width: 25px;
+    -fx-min-height: 25px;
 }
