Registration form 0.8. User sends info by pressing enter or clicking button

--- a/src/main/resources/org/example/register.fxml
+++ b/src/main/resources/org/example/register.fxml
@@ -23,7 +23,7 @@
             <Label text="password"/>
             <TextField fx:id="passField"/>
             <Label text="email"/>
-            <TextField fx:id="emailField"/>
+            <TextField fx:id="emailField" onAction="#register"/>
             <Button fx:id="registerButton" onAction="#register" text="register"/>
             <Label fx:id="successLabel"/>
         </VBox>
