--- a/src/main/resources/org/example/login.fxml
+++ b/src/main/resources/org/example/login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -18,9 +19,8 @@
             <Label text="login"/>
             <TextField fx:id="loginField"/>
             <Label text="password"/>
-            <TextField fx:id="passField" onAction="#login"/>
-            <Button fx:id="loginButton" text="login" onAction="#login"/>
-            <Label fx:id="successLabel"/>
+            <PasswordField fx:id="passField" onAction="#login"/>
+            <Button text="login" onAction="#login"/>
         </VBox>
     </center>
 </BorderPane>
