--- a/src/main/resources/org/example/register.fxml
+++ b/src/main/resources/org/example/register.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -21,9 +22,9 @@
             <Label text="login"/>
             <TextField fx:id="loginField"/>
             <Label text="password"/>
-            <TextField fx:id="passField"/>
-            <Label text="repeatPassword"/>
-            <TextField fx:id="repeatPassField"/>
+            <PasswordField fx:id="passField"/>
+            <Label text="repeat password"/>
+            <PasswordField fx:id="repeatPassField"/>
             <Label text="email"/>
             <TextField fx:id="emailField" onAction="#register"/>
             <Button fx:id="registerButton" onAction="#register" text="register"/>
