--- a/src/main/resources/org/example/profile.fxml
+++ b/src/main/resources/org/example/profile.fxml
@@ -8,9 +8,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="node" xmlns="http://javafx.com/javafx/10.0.2-internal"
             fx:controller="org.example.controller.ProfileController">
-    <ImageView AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0" fitHeight="140" fitWidth="125">
+    <ImageView fx:id="profilePic" onMouseClicked="#updateFile" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0"
+               fitHeight="140" fitWidth="125">
         <Image url="@pics/empty_profile.jpg"/>
     </ImageView>
     <!--information area-->
@@ -25,7 +26,7 @@
     </VBox>
     <!--buttons area-->
     <HBox fx:id="buttonsBox" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="25.0">
-        <Button fx:id="saveButton" text="save"/>
-        <Button fx:id="cancelButton" text="cancel"/>
+        <Button onAction="#saveProfile" text="save"/>
+        <Button text="cancel" onAction="#cancel"/>
     </HBox>
 </AnchorPane>
