--- a/src/main/resources/org/example/profile.fxml
+++ b/src/main/resources/org/example/profile.fxml
@@ -3,17 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="node" xmlns="http://javafx.com/javafx/10.0.2-internal"
             fx:controller="org.example.controller.ProfileController">
-    <ImageView fx:id="profilePic" onMouseClicked="#updateFile" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0"
-               fitHeight="140" fitWidth="125">
-        <Image url="@pics/empty_profile.jpg"/>
-    </ImageView>
+    <Circle fx:id="avatarsPicture" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0"
+            onMouseClicked="#updateFile"/>
     <!--information area-->
     <VBox fx:id="infoBox" AnchorPane.topAnchor="25.0" AnchorPane.rightAnchor="50.0">
         <Label text="login"/>
