Double confirmation before the user can change the password.

--- a/src/main/resources/org/example/login.fxml
+++ b/src/main/resources/org/example/login.fxml
@@ -15,7 +15,7 @@
     </padding>
     <center>
         <VBox fx:id="form" alignment="CENTER">
-            <Label fx:id="failureLabel"/>
+            <Label fx:id="infoLabel"/>
             <Label text="name or e-mail"/>
             <TextField fx:id="loginField"/>
             <Label text="password"/>
