--- a/src/main/resources/org/example/password_popover.fxml
+++ b/src/main/resources/org/example/password_popover.fxml
@@ -15,13 +15,14 @@
     </padding>
     <center>
         <VBox alignment="CENTER">
-            <Label fx:id="failureLabel"/>
+            <Label fx:id="infoLabel"/>
+            <Label text="current password"/>
+            <PasswordField fx:id="currentPassword"/>
             <Label text="password"/>
             <PasswordField fx:id="passField"/>
             <Label text="repeat password"/>
             <PasswordField fx:id="repeatPassField"/>
-            <Button fx:id="changeButton" onAction="#change" text="change password"/>
-            <Label fx:id="successLabel"/>
+            <Button onAction="#change" text="change password"/>
         </VBox>
     </center>
 </BorderPane>
