--- a/src/main/resources/org/example/password_popover.fxml
+++ b/src/main/resources/org/example/password_popover.fxml
@@ -22,7 +22,7 @@
             <PasswordField fx:id="passField"/>
             <Label text="repeat password"/>
             <PasswordField fx:id="repeatPassField"/>
-            <Button text="change password" styleClass="small-button"/>
+            <Button text="change password" styleClass="small-button" onAction="#change"/>
         </VBox>
     </center>
 </BorderPane>
